--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     arjs
   >
     <a-marker preset="hiro">
-      <a-box
-        position='0 0.5 0'
-        material='color: yellow;'
-      ></a-box>
+      <a-entity position='0 -6 -12' rotation="-20 0 0" gltf-model="url(assets/model.gltf)"></a-entity>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
