--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     arjs
   >
     <a-marker preset="hiro">
-      <a-entity position='0 -6 -12' rotation="-20 0 0" gltf-model="url(assets/model.gltf)"></a-entity>
+      <a-entity position='0 -6 -12' rotation="-20 0 0" gltf-model="url(asset/model.gltf)"></a-entity>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
