--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-<script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.0/aframe/build/aframe-ar.js"></script>  
-<a-scene
-    embedded
-    arjs
-  >
-    <a-marker preset="hiro">
+<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.5/aframe/build/aframe-ar.js"></script>
+
+<body style='margin : 0px; overflow: hidden;'>
+  <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
+    <a-marker type='pattern' url='asset/pattern-marker.patt'>
       <a-entity position='0 -6 -12' rotation="-20 0 0" gltf-model="url(asset/model.gltf)"></a-entity>
     </a-marker>
-    <a-entity camera></a-entity>
   </a-scene>
+</body>
