--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
-    <a-marker type='pattern' url='asset/pattern-marker.patt.png'>
+    <a-marker type='pattern' url='asset/pattern-marker.patt'>
       <a-entity position='0 -6 -12' rotation="-20 0 0" gltf-model="url(asset/model.gltf)"></a-entity>
     </a-marker>
   </a-scene>
